--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,7 @@
     "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.1.4",
     "paypal-rest-sdk": "^1.8.1",
+    "razorpay": "^2.9.6",
     "stripe": "^20.1.2"
   }
 }
